cloudcmr-back/src/main/deploy/k8s.yml
apiVersion: v1
kind: Namespace
metadata:
  name: cloudcmr
  labels:
    name: cloudcmr
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudcmr-back-${ENVIRONMENT}
  namespace: cloudcmr
  labels:
    app.kubernetes.io/name: back
    app.kubernetes.io/instance: ${ENVIRONMENT}
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: back
      app.kubernetes.io/instance: ${ENVIRONMENT}
  template:
    metadata:
      labels:
        app.kubernetes.io/name: back
        app.kubernetes.io/instance: ${ENVIRONMENT}
    spec:
      containers:
        - name: cloudcmr-back
          imagePullPolicy: Always
          image: gcr.io/truaro-test-gcp/cloudcmr-back:latest
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /api/actuator/health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /api/actuator/health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: cloudcmr-back-${ENVIRONMENT}
  namespace: cloudcmr
  labels:
    app.kubernetes.io/name: back
    app.kubernetes.io/instance: ${ENVIRONMENT}
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app.kubernetes.io/name: back
    app.kubernetes.io/instance: ${ENVIRONMENT}
