cloudcmr-back/src/main/deploy/k8s.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloudcmr
  labels:
    name: cloudcmr
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudcmr-back-${ENVIRONMENT}
  namespace: cloudcmr
  labels:
    app.kubernetes.io/name: back
    app.kubernetes.io/instance: ${ENVIRONMENT}
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: back
      app.kubernetes.io/instance: ${ENVIRONMENT}
  template:
    metadata:
      labels:
        app.kubernetes.io/name: back
        app.kubernetes.io/instance: ${ENVIRONMENT}
    spec:
      containers:
        - name: cloudcmr-back
          imagePullPolicy: Always
          image: gcr.io/truaro-test-gcp/cloudcmr-back:latest
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /api/actuator/health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /api/actuator/health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: cloudcmr-back-${ENVIRONMENT}
  namespace: cloudcmr
  labels:
    app.kubernetes.io/name: back
    app.kubernetes.io/instance: ${ENVIRONMENT}
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app.kubernetes.io/name: back
    app.kubernetes.io/instance: ${ENVIRONMENT}
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: cloudcmr-back-${ENVIRONMENT}
  namespace: cloudcmr
  labels:
    app.kubernetes.io/name: back
    app.kubernetes.io/instance: ${ENVIRONMENT}
spec:
  entryPoints:
    - https
  routes:
    - match: Host(`${ENVIRONMENT}.${BASE_URL}`)
      kind: Rule
      services:
        - name: cloudcmr-back-${ENVIRONMENT}
          namespace: cloudcmr
          port: 8080
  tls:
    certResolver: one-encrypt
    domains:
      - main: "*.${BASE_URL}"
